--- a/assets/sass/_default/layouts/_main.sass
+++ b/assets/sass/_default/layouts/_main.sass
@@ -1,4 +1,6 @@
 main
+    &.page-with-blocks
+        padding-bottom: 0
     [itemprop="articleBody"]
         h2
             margin-top: $grid-gutter-width
