--- a/assets/sass/_default/partials/_sticky.sass
+++ b/assets/sass/_default/partials/_sticky.sass
@@ -1,3 +1,5 @@
 .sticky
     @include media-breakpoint-up(md)
-        top: $header-height
+        top: $spacer
+        html:not(.is-scrolling-down) &
+            top: calc(#{$header-height} + #{$spacer})
