--- a/assets/sass/diplomas/_pages.sass
+++ b/assets/sass/diplomas/_pages.sass
@@ -3,3 +3,10 @@
     header[role="banner"],
     .hero
         background-color: $program-color
+        > div + div
+            .container
+                padding-top: px2rem(45)
+    .essential
+        dt:first-of-type,
+        dd:first-of-type
+            display: none
