--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -7,6 +7,9 @@
     header[role="banner"],
     .hero
         background-color: $program-color
+        > div + div
+            .container
+                padding-top: px2rem(45)
     aside
         background-color: darken($program-color, 3)
 
@@ -29,8 +32,8 @@
         @include media-breakpoint-up(md)
             margin-bottom: px2rem(128)
         .toc
-            padding-bottom: px2rem(10)
-            padding-top: px2rem(10)
+            padding-bottom: px2rem(20)
+            padding-top: px2rem(20)
             @include media-breakpoint-down(md)
                 margin-left: px2rem(-15)
                 overflow: auto
@@ -48,9 +51,10 @@
                     margin-bottom: 0
                 a
                     color: white
+                    line-height: 120%
                     transition: opacity 0.4s
             .active
-                opacity: 0.5
+                opacity: 0.7
     main
         .content
             > div
