--- a/layouts/partials/programs/show.html
+++ b/layouts/partials/programs/show.html
@@ -1,15 +1,26 @@
 <article itemscope itemtype="https://schema.org/EducationalOccupationalCredential">
   <meta itemprop="name" content="{{ partial "PrepareHTML" .Title }}">
   <meta itemprop="url" content="{{ .Permalink }}">
-
+  {{- if .Params.image -}}
+    {{- $id := .Params.image -}}
+    {{- if isset .Params.image "id" -}}
+      {{- $id = .Params.image.id -}}
+    {{- end -}}
+    {{- $image := partial "GetMedia" $id -}}
+    {{- if $image -}}
+      {{- $url := $image.url -}}
+      {{- if site.Params.keycdn -}}
+        {{- $url = $image.direct_url -}}
+      {{- end -}}
+      <meta itemprop="image" content="{{ $url }}">
+    {{- end -}}
+  {{- end -}}
   <div class="container">
     {{- partial "programs/abstract.html" .Params.presentation -}}
   </div>
-
   {{- partial "programs/presentation.html" . -}}
   {{- partial "blocks/list.html" .Params.blocks -}}
   {{- partial "programs/pedagogy.html" . -}}
   {{- partial "programs/results.html" . -}}
   {{- partial "programs/admission.html" . -}}
-
 </article>
