--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -60,6 +60,11 @@ $lead-font-weight: 500
 
 $paragraph-margin-bottom: $spacer
 
+$btn-padding-y-lg: 1rem
+$btn-padding-x-lg: 1.25rem
+$btn-font-size-lg: px2rem(18)
+$btn-border-radius-lg: 4px
+
 $breadcrumb-active-color: $white
 $breadcrumb-divider-color: rgba($white, .5)
 $breadcrumb-divider: quote(">")
