--- a/assets/sass/blocks/_video.sass
+++ b/assets/sass/blocks/_video.sass
@@ -1,4 +1,6 @@
 .block-video
+    .transcription
+        margin-bottom: 0
     @include media-breakpoint-up(md)
         @include in-page-without-aside
             .block-content
