--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -11,6 +11,7 @@
 @import "_default/partials/top"
 
 @import "_vendors/bootstrap/breadcrumb"
+@import "_vendors/bootstrap/buttons"
 @import "_vendors/bootstrap/container"
 @import "_vendors/bootstrap/pagination"
 @import "_vendors/bootstrap/table"
