--- a/assets/sass/posts/_pages.sass
+++ b/assets/sass/posts/_pages.sass
@@ -23,7 +23,7 @@
         .post-categories
             margin-bottom: calc(#{$spacer} * 2)
         div + div
-            border-top: 1px solid $border-color
+            border-top: 1px solid black
         div:not([itemprop="articleSection"])
             display: flex
             justify-content: space-between
