--- a/layouts/partials/posts/aside.html
+++ b/layouts/partials/posts/aside.html
@@ -12,7 +12,7 @@
   </div>
   {{ end -}}
   <div>
-    <p>{{ i18n "posts.share" }}</p>
+    <p>{{ i18n "commons.share" }}</p>
     {{ partial "commons/share.html" }}
   </div>
 </aside>
