--- a/layouts/partials/programs/hero-single.html
+++ b/layouts/partials/programs/hero-single.html
@@ -14,6 +14,12 @@
         {{- $diploma := site.GetPage (printf "/diplomas/%s" .) -}}
         {{- partial "diplomas/essential" $diploma -}}
       {{- end -}}
+      <div class="dropdown-share dropup">
+        <button type="button" id="shareProgram" data-bs-toggle="dropdown" aria-expanded="false">{{ i18n "commons.share" }}</button>
+        <div class="dropdown-menu">
+          {{ partial "commons/share.html" . }}
+        </div>
+      </div>
     </div>
   </div>
 </header>
