--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -13,9 +13,10 @@
     .dropdown-share
         margin-top: $spacer
         @include media-breakpoint-up(md)
-            float: right
+            bottom: 2.25rem
             margin-top: 0
-            transform: translateY(-100%)
+            position: absolute
+            right: $grid-gutter-width
         > button
             font-size: px2rem(18)
 
