--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -4,12 +4,16 @@
         padding-bottom: $toc-height
 
 .programs__section
-    header[role="banner"],
     .hero
         background-color: $program-color
         > div + div
             .container
                 padding-top: px2rem(45)
+    header[role="banner"]:not(.is-sticky)
+        background-color: $program-color
+        .menu-expand
+            .dropdown-menu
+                background-color: $program-color
     .dropdown-share
         margin-top: $spacer
         @include media-breakpoint-up(md)
