--- a/assets/sass/_default/layouts/_header.sass
+++ b/assets/sass/_default/layouts/_header.sass
@@ -1,4 +1,5 @@
 header[role="banner"]
+    transition: background $header-transition, top $header-transition
     &::after
         background-color: rgba(white, .2)
         bottom: 0
@@ -16,3 +17,11 @@ header[role="banner"]
     nav[role="navigation"]
         button[type="button"]
             color: white
+
+    &:not(.is-sticky)
+        background-color: $site-color
+
+
+    &.is-sticky
+        .logo img
+            filter: invert(1)
