--- a/assets/sass/_default/partials/_menu.sass
+++ b/assets/sass/_default/partials/_menu.sass
@@ -14,14 +14,23 @@
             span
                 padding-bottom: 1rem
                 padding-top: 1rem
+    @include media-breakpoint-down(lg)
+        background-color: transparent
+
+    li
+        a,
+        span
+            header[role="banner"]:not(.is-sticky) &
+                color: white
+                &:focus,
+                &:hover
+                    color: white
+
 
     .nav-level-1
         > li
             @include media-breakpoint-up(lg)
                 margin-left: px2rem(10)
-            > a,
-            > span
-                color: white
         & > .has-children
             li a,
             li span
