--- a/assets/sass/_vendors/bootstrap/_breadcrumb.sass
+++ b/assets/sass/_vendors/bootstrap/_breadcrumb.sass
@@ -2,6 +2,7 @@
     align-items: baseline
     &-item
         font-size: $breadcrumb-font-size
+        padding: .3rem 0
         a
             color: $breadcrumb-link-color
             transition: color .3s ease, text-decoration-color .3s ease
