--- a/assets/sass/_default/layouts/_header.sass
+++ b/assets/sass/_default/layouts/_header.sass
@@ -1,5 +1,14 @@
 header[role="banner"]
     transition: background $header-transition, top $header-transition
+
+    html.is-menu-open &
+        background-color: white
+        color: black
+        &::after
+            background-color: rgba(black, 0.2)
+        .logo img
+            filter: invert(1)
+
     &::after
         background-color: rgba(white, .2)
         bottom: 0
@@ -7,10 +16,12 @@ header[role="banner"]
         height: 1px
         left: 0
         position: absolute
+        transition: background-color $header-transition
         width: 100%
     .logo
         img
             height: 42px
+            transition: filter $header-transition
             @include media-breakpoint-down(lg)
                 height: 30px
 
