--- a/assets/sass/_theme/_default/base/_typography.sass
+++ b/assets/sass/_theme/_default/base/_typography.sass
@@ -30,7 +30,9 @@ h6
 p, li
     font-size: px2rem(16)
     line-height: 140%
-    @include media-breakpoint-up(lg)
+    // @include media-breakpoint-up(lg)
+    //     font-size: px2rem(18)
+    @include media-breakpoint-up(xxl)
         font-size: px2rem(20)
         line-height: 150%
 
