--- a/assets/sass/blocks/_key_figures.sass
+++ b/assets/sass/blocks/_key_figures.sass
@@ -3,11 +3,20 @@
         dt
             @include media-breakpoint-up(lg)
                 font-size: 1rem
-                strong
-                    font-weight: 400
-                    line-height: 1
 
-                @include in-page-without-aside
+            @include in-page-without-aside
+                @include media-breakpoint-up(lg)
                     font-size: 1.5rem
                     strong
+                        font-size: px2rem(80)
+                @include media-breakpoint-up(xl)
+                    strong
+                        font-size: px2rem(100)
+                @include media-breakpoint-up(xxl)
+                    strong
                         font-size: px2rem(120)
+
+            white-space: nowrap
+            strong
+                font-weight: 400
+                line-height: 1
