--- a/assets/sass/_default/partials/_hero.sass
+++ b/assets/sass/_default/partials/_hero.sass
@@ -9,6 +9,9 @@
     .page-with-blocks &
         margin-bottom: 0
 
+    *:focus-visible
+        outline-color: white
+
     p
         margin-bottom: 0
 
