--- a/assets/sass/_vendors/bootstrap/_breadcrumb.sass
+++ b/assets/sass/_vendors/bootstrap/_breadcrumb.sass
@@ -1,5 +1,8 @@
 .breadcrumb
     align-items: baseline
+    @include media-breakpoint-up(md)
+        margin-left: -.4rem
+        padding-left: .4rem
     &-item
         font-size: $breadcrumb-font-size
         padding: .3rem 0
