--- a/assets/sass/blocks/_chapter.sass
+++ b/assets/sass/blocks/_chapter.sass
@@ -1,6 +1,8 @@
 .block-chapter
     .top
         margin-bottom: px2rem(24)
+    h3
+        @extend .h5
 
     @include media-breakpoint-up(md)
         @include in-page-without-aside
