--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -1,9 +1,9 @@
 // Site variables
 $recherche: #EB7100
-$site-color: #4C1540
-$institute-color: #001F5C
-$post-color: #4926AF
-$program-color: #004B1E
+$site-color: #002232
+$institute-color: #32538D
+$post-color: #312783
+$program-color: #006633
 
 // Header
 $enable-header-sticky: true
