add programs to program

--- a/layouts/partials/programs/show.html
+++ b/layouts/partials/programs/show.html
@@ -18,6 +18,7 @@
   <div class="container">
     {{- partial "programs/abstract.html" .Params.presentation -}}
   </div>
+  {{- partial "programs/children.html" .Pages -}}
   {{- partial "programs/presentation.html" . -}}
   {{- partial "blocks/list.html" .Params.blocks -}}
   {{- partial "programs/pedagogy.html" . -}}
