--- a/assets/sass/pages/_pages.sass
+++ b/assets/sass/pages/_pages.sass
@@ -20,6 +20,7 @@
     main
         > div
             > aside
+                margin-bottom: 0
                 padding-bottom: 4rem
                 padding-top: 4rem
                 > div
