--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -96,3 +96,6 @@ $pagination-border-width: 0
 $pagination-active-bg: transparent
 $pagination-active-color: rgba(black, .65)
 $pagination-disabled-color: #DADADA
+
+$arrow-ease-transition: cubic-bezier(0, 0.65, 0.4, 1.2)
+$arrow-ease-transition-2: cubic-bezier(0, 0.65, 0.4, 1)
