--- a/assets/sass/home/_pages.sass
+++ b/assets/sass/home/_pages.sass
@@ -41,6 +41,7 @@
         .block-pages
             .main-page
                 a
+                    @include hover-translate-icon
                     text-decoration-color: transparent
                     &:hover
                         text-decoration-color: black
