--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,5 +1,7 @@
 @import "_theme/hugo-osuny"
 
+@import "_default/abstracts/mixins"
+
 @import "_default/layouts/footer"
 @import "_default/layouts/header"
 @import "_default/layouts/main"
