Button blocks hover animation

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -19,6 +19,7 @@
 @import "_vendors/bootstrap/table"
 
 @import "blocks/blocks"
+@import "blocks/call_to_action"
 @import "blocks/chapter"
 @import "blocks/gallery"
 @import "blocks/key_figures"
