--- a/assets/sass/blocks/_call_to_action.sass
+++ b/assets/sass/blocks/_call_to_action.sass
@@ -5,6 +5,22 @@
             div + div,
             & >
                 a
-                    &:hover
-                        color: $white
+                    &:nth-child(1):hover
                         background-color: $black
+                        color: $white
+                    &:nth-of-type(2),
+                    &:nth-of-type(3)
+                        @extend .btn-link
+                        background-color: transparent
+                        border: 0
+                        color: $white
+                        margin-left: - $btn-padding-x
+                        text-decoration-thickness: 1px
+                        &:hover
+                            color: $white
+                            text-decoration-color: transparent
+
+        [role="group"]
+            align-items: flex-start
+            display: flex
+            flex-direction: column
