--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -31,6 +31,7 @@
 @import "home/pages"
 @import "pages/pages"
 @import "pages/widgets"
+@import "persons/pages"
 @import "posts/pages"
 @import "programs/pages"
 @import "programs/widgets"
