--- a/assets/sass/diplomas/_widgets.sass
+++ b/assets/sass/diplomas/_widgets.sass
@@ -28,6 +28,8 @@ ul.diplomas
                 font-size: px2rem(22)
             &:hover
                 background-color: $light
+            &:focus
+                color: black
 
 .essential
     @extend .row
