--- a/assets/sass/persons/_pages.sass
+++ b/assets/sass/persons/_pages.sass
@@ -1,4 +1,8 @@
 .persons__section
+    .page-with-blocks
+        .hero
+            @include media-breakpoint-up(md)
+                margin-bottom: px2rem(120)
     .toc
         ol
             > li
