--- a/assets/sass/_theme/_default/base/_typography.sass
+++ b/assets/sass/_theme/_default/base/_typography.sass
@@ -1,31 +1,40 @@
 h1
+    font-size: px2rem(30)
     font-weight: 600
+    line-height: 120%
     @include media-breakpoint-up(md)
         font-size: px2rem(50)
-        line-height: 120%
     @include media-breakpoint-up(lg)
         font-size: px2rem(60)
 h2
+    font-size: px2rem(24)
+    line-height: 110%
+    @include media-breakpoint-up(md)
+        font-size: px2rem(50)
     @include media-breakpoint-up(lg)
         font-size: px2rem(60)
         line-height: 130%
 h3
+    font-size: px2rem(20)
+    line-height: 110%
     @include media-breakpoint-up(lg)
         font-size: px2rem(40)
-        line-height: 110%
 h4
+    font-size: px2rem(18)
+    line-height: 130%
     @include media-breakpoint-up(lg)
         font-size: px2rem(28)
-        line-height: 130%
 h5
+    font-size: px2rem(16)
     letter-spacing: -0.01em
+    line-height: 130%
     @include media-breakpoint-up(lg)
         font-size: px2rem(24)
-        line-height: 130%
 h6
+    font-size: px2rem(16)
+    line-height: 130%
     @include media-breakpoint-up(lg)
         font-size: px2rem(22)
-        line-height: 130%
 
 p, li
     font-size: px2rem(16)
