--- a/assets/sass/diplomas/_widgets.sass
+++ b/assets/sass/diplomas/_widgets.sass
@@ -22,6 +22,7 @@ ul.diplomas
         a
             color: white
         a
+            white-space: normal
             &:not(:first-child)
                 border-top: 1px solid $gray-600
             @include media-breakpoint-up(md)
