--- a/assets/sass/_theme/_default/base/_typography.sass
+++ b/assets/sass/_theme/_default/base/_typography.sass
@@ -47,7 +47,7 @@ p, li
 
 .surtitle
     font-family: $headings-font-family
-    font-size: 1rem
+    font-size: px2rem(20)
     font-weight: 600
     line-height: 130%
     text-transform: uppercase
