Fix sticky header

--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -50,7 +50,7 @@
         z-index: 9
         @if $enable-header-sticky
             top: $header-height
-            @include media-breakpoint-down(lg)
+            @include media-breakpoint-up(md)
                 top: $header-height-md
             html.is-scrolling-down &
                 top: 0
