--- a/assets/sass/diplomas/_pages.sass
+++ b/assets/sass/diplomas/_pages.sass
@@ -9,6 +9,7 @@
             background-color: $program-color
     .hero
         background-color: $program-color
+        margin-bottom: 3rem
         > div + div
             .container
                 padding-top: px2rem(45)
