--- a/assets/sass/_default/layouts/_header.sass
+++ b/assets/sass/_default/layouts/_header.sass
@@ -9,15 +9,16 @@ header[role="banner"]
         .logo img
             filter: invert(1)
 
-    &::after
-        background-color: rgba(white, .2)
-        bottom: 0
-        content: ''
-        height: 1px
-        left: 0
-        position: absolute
-        transition: background-color $header-transition
-        width: 100%
+    @include media-breakpoint-up(md)
+        &::after
+            background-color: rgba(white, .2)
+            bottom: 0
+            content: ''
+            height: 1px
+            left: 0
+            position: absolute
+            transition: background-color $header-transition
+            width: 100%
     .logo
         img
             height: 42px
