--- a/assets/sass/diplomas/_widgets.sass
+++ b/assets/sass/diplomas/_widgets.sass
@@ -49,3 +49,5 @@ ul.diplomas
             padding-bottom: 0
     dd
         @extend .col-md-9
+        @include media-breakpoint-down(md)
+            padding-top: 0
