--- a/assets/sass/_default/partials/_hero.sass
+++ b/assets/sass/_default/partials/_hero.sass
@@ -17,7 +17,7 @@
 
     > div:first-of-type
         > div
-            margin-top: $grid-gutter-width
+            margin-top: $spacer
             @include media-breakpoint-up(md)
                 margin-top: px2rem(120)
 
