--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -43,6 +43,7 @@
             padding-bottom: calc(#{$grid-gutter-width} * 2)
 
     aside
+        background-color: $program-color
         margin-bottom: 3rem
         position: sticky
         top: 0
