--- a/assets/sass/_default/partials/_hero.sass
+++ b/assets/sass/_default/partials/_hero.sass
@@ -26,7 +26,7 @@
         .container
             padding-bottom: $spacer
             padding-top: $spacer
-        @include media-breakpoint-up(lg)
+        @include media-breakpoint-up(md)
             &::before
                 background-color: rgba(white, .2)
                 content: ''
