--- a/assets/sass/pages/_pages.sass
+++ b/assets/sass/pages/_pages.sass
@@ -23,6 +23,8 @@
                 margin-bottom: 0
                 padding-bottom: 4rem
                 padding-top: 4rem
+                @include media-breakpoint-down(md)
+                    padding-bottom: 0
                 > div
                     > *
                         @extend .col-md-4
