--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -18,11 +18,11 @@
     .hero
         background-color: $program-color
         > div + div
-            @include media-breakpoint-down(lg)
+            @include media-breakpoint-down(md)
                 background-color: darken($program-color, 3)
                 margin: px2rem(50) 1rem px2rem(40)
 
-            @include media-breakpoint-up(lg)
+            @include media-breakpoint-up(md)
                 .container
                     padding-top: px2rem(45)
     .dropdown-share
@@ -49,9 +49,9 @@
         top: 0
         transition: top $header-transition
         z-index: 9
-        @include media-breakpoint-down(lg)
+        @include media-breakpoint-down(md)
             border-top: 1px solid rgba(white, .2)
-        @include media-breakpoint-up(lg)
+        @include media-breakpoint-up(md)
             background-color: darken($program-color, 3)
         @if $enable-header-sticky
             top: $header-height
@@ -120,15 +120,20 @@
         margin-bottom: 0
         > :not(caption) > * > *
             border: 0
-            padding-bottom: 1rem
-            padding-top: 1rem
+            @include media-breakpoint-down(md)
+                padding-bottom: .5rem
+            @include media-breakpoint-up(md)
+                padding-bottom: 1rem
+                padding-top: 1rem
         th, td
             font-weight: 400
             line-height: 140%
             @include media-breakpoint-up(lg)
-                font-size: 22px
+                font-size: px2rem(22)
         th
             padding-right: 0
-            width: calc(100% / 7 * 3)
+            @include media-breakpoint-up(lg)
+                width: calc(100% / 7 * 3)
         td
-            padding-left: calc(#{$grid-gutter-width} / 2)
+            @include media-breakpoint-up(md)
+                padding-left: calc(#{$grid-gutter-width} / 2)
